--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "client-dev": "webpack-dev-server",
-    "app-dev": "electron ./app/"
+    "app-dev": "nodemon --watch ./app ./app/ --exec electron",
+    "dev": "npm-run-all --parallel client-dev app-dev"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.0",
+    "nodemon": "^1.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
