--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "client-dev": "webpack-dev-server",
-    "app-dev": "nodemon --watch ./app ./app/ --exec electron",
+    "app-dev": "nodemon --watch ./app ./app/ --ignore ./app/client ./node_modules --exec electron",
     "dev": "npm-run-all --parallel client-dev app-dev"
   },
   "author": "",
