--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "reflexbox": "^3.0.0-0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
