--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "app.js",
   "scripts": {
     "client-dev": "webpack-dev-server",
-    "app-dev": "nodemon --watch ./app ./app/ --ignore ./app/client ./node_modules --exec electron --inspect=5858",
+    "app-dev": "nodemon -r babel-register --watch ./app ./app/ --ignore ./app/client ./node_modules --exec electron --inspect=5858",
     "dev": "npm-run-all --parallel client-dev app-dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "debounce": "^1.0.2",
+    "dotenv-extended": "^2.0.1",
     "electron": "^1.7.5",
     "fs": "0.0.1-security",
     "lodash": "^4.17.4",
+    "mongoose": "^4.11.10",
     "readline": "^1.3.0"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
     "eslint-config-noamokman": "^6.0.1",
