--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-image": "^1.0.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
